fixed logged in box overlap with messages box

--- a/public/ocss/styles.css
+++ b/public/ocss/styles.css
@@ -728,6 +728,11 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .p-0 {
   padding: 0px;
 }
